--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bradley Rispone",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
